Avoid whitespace breaks

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -109,8 +109,7 @@ body {
   width: 100%;
 }
 #main aside .tags {
-  /* margin-left: 1em; */
-  /* z-index: -1; */
+  white-space: nowrap;
 }
 #readme {
   font-size: 1.2em;
